--- a/omixcore.yaml
+++ b/omixcore.yaml
@@ -36,7 +36,7 @@ form_fields:
         required: Yes
         type: textarea
         min_length: 50
-        max_length: 10000
+        max_length: 5000
     -   name: mode
         description: Run against lincRNAs database or custom RNA sequences
         type: radio
@@ -57,6 +57,8 @@ form_fields:
         required: No
         type: textarea
         hidden: Yes
+        min_length: 50
+        max_length: 30000
     -   name: email
         description: Email address (optional, used for notification)
         type: email
@@ -66,7 +68,7 @@ examples:
     #-   reference_id:   55985
     #    title:          <br>CELF1
     #    description:    a canonical RNA-binding protein ( from <a href="http://www.sciencedirect.com/science/article/pii/S0300908405002634" target="_blank">Biochimie 2006</a>)
-    -   reference_id: 96535
+    -   reference_id: 96557
         title: P78344 NEAT1
         description: a positive protein-RNA pair, validated by eCLIP assay.
     -   reference_id: 96538
@@ -75,7 +77,7 @@ examples:
 
 algorithm:
     command:              "omixcore.py -output_dir=<output_dir>"
-    processing_timeout: 7200
+    processing_timeout: 72000
 
 # for the processing part
 output:
