--- a/omixcore.yaml
+++ b/omixcore.yaml
@@ -53,7 +53,7 @@ form_fields:
                 shows:
                   - rna_seq
     -   name: rna_seq
-        description: RNA sequences (FASTA format - min 50 nt)
+        description: RNA sequences (FASTA format - min: 50 nt, max: 30000 nt)
         required: No
         type: textarea
         hidden: Yes
@@ -68,11 +68,11 @@ examples:
     #-   reference_id:   55985
     #    title:          <br>CELF1
     #    description:    a canonical RNA-binding protein ( from <a href="http://www.sciencedirect.com/science/article/pii/S0300908405002634" target="_blank">Biochimie 2006</a>)
-    -   reference_id: 96591
-        title: MALAT1 and P10155
+    -   reference_id: 96669
+        title: P16989 and NM_006312 (NCOR2)
         description: a positive protein-RNA pair, validated by eCLIP assay.
     #-   reference_id: 96538
-    #    title: P78344 NR_036527
+    #    title: P78344 NR_036527 
     #    description: a negative protein-RNA pair, validated by eCLIP assay.
 
 algorithm:
